--- a/src/components/Eventful/Find/Configure/Settings.css
+++ b/src/components/Eventful/Find/Configure/Settings.css
@@ -4,3 +4,13 @@
 .radioButton {
  margin-bottom: 16;
 }
+.flex{
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; /*centers items on the line (the x-axis by default)*/
+  align-items: center;
+  margin-top:-5%;
+}
