--- a/src/components/Eventful/Find/Find.css
+++ b/src/components/Eventful/Find/Find.css
@@ -8,3 +8,21 @@ test ={
     display: inline-block;
     font-size: 16px;
 }
+
+.footer{
+  margin-top: 100%;
+}
+
+.center{
+    margin: 0 auto;
+}
+.flex{
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; /*centers items on the line (the x-axis by default)*/
+  align-items: center;
+  margin-top:-3%;
+}
