--- a/src/components/UI/Buttons/Button.css
+++ b/src/components/UI/Buttons/Button.css
@@ -1,5 +1,11 @@
-style = {
-  margin: 12,
+.style = {
+  margin: 12;
+  width: 133px;
+  height: 297px;
+  margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin: 0 auto;
 }
 
 testA = {
