--- a/src/components/Eventful/View/View.css
+++ b/src/components/Eventful/View/View.css
@@ -2,7 +2,7 @@
     display: "flex";
     flexWrap: "wrap";
     justifyContent: "space-around";
-    height: 550px;
+    height: 77%;
     overflow: scroll;
     width: 70%;
     margin: 0 auto;
@@ -33,4 +33,14 @@
     left: 0;
     width: '100%';
     opacity: 0;
+  }
+  .flex{
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center; /*centers items on the line (the x-axis by default)*/
+    align-items: center;
+    margin-top:-3%;
   }
