--- a/src/components/Eventful/View/View.css
+++ b/src/components/Eventful/View/View.css
@@ -4,7 +4,7 @@
     justify-Content: "space-around";
     height: 50%;
     overflow: scroll;
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
 },
 .gridList {
@@ -38,7 +38,7 @@
     overflow: hidden;
     position: absolute;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center; /*centers items on the line (the x-axis by default)*/
     margin-top:-3%;
