--- a/src/components/Eventful/Find/Configure/Settings.css
+++ b/src/components/Eventful/Find/Configure/Settings.css
@@ -24,7 +24,7 @@
   font-family: 'Roboto', sans-serif;
   font-size:30px;
   font-weight:light;
-  color:#2F6F94;
+  color:#6ca0dc;
   margin-bottom:10px;
 
 }
