--- a/src/components/Eventful/login/login.css
+++ b/src/components/Eventful/login/login.css
@@ -1,19 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed');
+.parent{
+    margin:0;
+    padding:0;
+    /* opacity:0.1; */
+    display:flex;
+    flex-direction: column;    
+    background-image: url('../../../assets/kitchener.png');
+}
 .text{
-    color: rgba(255, 255, 255, 0.6);
+    color: black;
         margin-left:0px;
     /* font-family: 'Roboto', sans-serif; */
 }
 .title1{
     color:#ffffff;
-    font-size:30px;
+    font-size:38px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight:normal;
  }
  
 .title2{
     color:#ffffff;
-    font-size:42px;
+    font-size:50px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight:normal;
 }
@@ -46,12 +54,17 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin-top:-20px;
     justify-content: flex-start;
     width:100%;
     flex-grow: 1;
     /* position: relative; */
 }
 
+.txtfield{
+    display:flex;
+    justify-content: baseline;
+}
 .bottom1{
     font-size:13px;
     color:rgba(255, 255, 255, 0.6);
@@ -70,7 +83,7 @@
 
 }
 .flex {
-    background-color:#2F6F94;
+    background-color:	#6ca0dc;
 
     flex-direction: column;
     position: absolute;
@@ -81,14 +94,7 @@
     justify-content: space-evenly; 
 }
 
-.parent{
-    margin:0;
-    padding:0;
-    /* opacity:0.1; */
-    display:flex;
-    flex-direction: column;    
-    /* background-image: url('C:\\Users\\dania\\Documents\\3A\\MSCI 444\\eventFUL2\\EventFUL\\src\\components\\Eventful\\login\\background.jpg'); */
-}
+
 .alternativeLoginButtons {
     display: flex;
     justify-content: space-evenly;
@@ -111,7 +117,7 @@ height: 50px;
 left: 163px;
 top: 88px;
 
-background: #2F6F94;
+background: rgb(83, 207, 245);
 border: 1px solid #F2F2F2;
 box-sizing: border-box;
 }
@@ -122,15 +128,16 @@ box-sizing: border-box;
     /* position: relative; */
     display:flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     flex-grow:2;
     /* align-items: flex-start; */
 }   
 
 
 .newuser{
-
+    margin-top:8px;
     font-family: 'Roboto', sans-serif;
+    font-weight: 450;
 
 }
 
