--- a/src/components/Eventful/login/login.css
+++ b/src/components/Eventful/login/login.css
@@ -39,6 +39,7 @@
     display:flex;
     align-items: baseline;
     flex-grow: 3;
+    margin-top:100px;
     justify-content: baseline;
     /* font-weight: 100; */
 
@@ -138,6 +139,7 @@ box-sizing: border-box;
     margin-top:8px;
     font-family: 'Roboto', sans-serif;
     font-weight: 450;
+    color:white;
 
 }
 
